# fastapi_zero

./: .coverage  .env  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
fastapi_zero/: app.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 3ace1bcc4c47_exercicio_02_aula_04.py  f0088f8966a2_create_users_table.py  fd91f9f3f2e8_criando_tabelas.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
